feat(core): Telescope.all(over(...), over(...)) — declarative multi-edit
Adds Edit<S> + Telescope.all(...) as the recommended multi-edit shape. Each
over(PATH, fn) is one edit on its own line; Telescope.all(...) folds them into
a reusable Telescope<S, S>. No chain blur, count visible at a glance.

The existing .update(Telescope, fn) / .with(fn) chain accumulator stays as the
alternative form for inline trailing edits — internally Telescope.all just
folds into the same Function<S, S> chain slot, so no new internal machinery.

- core: new public interface Edit<S> with static over(path, fn), package-private EditImpl
- core: Telescope.all(Edit<S>...) static factory (varargs, identity on empty)
- tests: AllOverTest covers single/multi/empty/reuse/equivalence-with-chain
- README: multi-edit section rewritten to lead with Telescope.all(over(...))
- CLAUDE.md: public-surface table + multi-edit notes updated